--- a/template.html
+++ b/template.html
@@ -4,34 +4,34 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>{email_title}</title>
     <style>
-        body {
+        body {{
             font-family: Arial, sans-serif;
-        }
+        }}
 
-        .page {
+        .page {{
             width: 210mm;
             min-height: 297mm;
             max-width: 210mm;
             max-height: 297mm;
             padding: 2mm 5mm;
             overflow: visible;
-        }
+        }}
 
-        .footer {
+        .footer {{
             width: 210mm;
             font-size: 8pt;
             padding-top: 5mm;
-        }
+        }}
 
-        .footer-section {
+        .footer-section {{
             width: 33%;
             text-align: left;
             vertical-align: top;
-        }
+        }}
 
-        .form-container {
+        .form-container {{
             margin-bottom: 20px;
-        }
+        }}
     </style>
 </head>
 <body>
@@ -39,16 +39,20 @@
         <div class="freier-bereich">
             <p id="letterContent">
                 {formOfAddress},
-                <br><br>
-                ich hoffe, diese Nachricht erreicht Sie wohlauf. Mein Name ist {fullName} und ich bin auf der Suche nach einer Wohnung oder einem Zimmer in einer Wohngemeinschaft in Berlin. Da ich gehört habe, dass Ihre Immobilienverwaltung über ein vielfältiges Angebot an Mietobjekten verfügt, möchte ich mich hiermit initiativ bei Ihnen bewerben.
-                <br><br>
-                Für ein persönliches Gespräch stehe ich jederzeit zur Verfügung und freue mich auf Ihre Rückmeldung.
-                <br><br>
-                Mit freundlichen Grüßen,
-                <br>
-                {fullName}
+                <br></br>
+                Mein Name ist Jonah Großhanten, 29, Geschäftsführer eines Software-Startups in Hamburg. Ich bin ein ruhiger, zuverlässiger und ordentlicher Mieter, der großen Wert auf ein gepflegtes Wohnumfeld legt. Mit einem Budget von ca. 1300 Euro warm suche ich ein Zuhause in Hamburg – idealerweise in den verkehrsgünstigen Stadtteilen Altona, Eimsbüttel, Hamburg-Nord oder Hamburg-Mitte.
+                <br></br>
+                Zur Info: Mein Unternehmen befindet sich aktuell im Aufbau, wobei meine Eltern für alle Mietzahlungen garantieren.
+                <br></br>
+                Ich freue mich auf Ihre Rückmeldung und ein persönliches Gespräch. Sie erreichen mich auch spontan telefonisch unter 0157-37312502.
+                <br></br>
+                Mit freundlichen Grüßen
+                <br></br>
+                Jonah Großhanten
             </p>
         </div>
     </div>
 </body>
+
+
 </html>
